examples/bad/hold_continue_outer_field.mko
// EXPECT: use of moved
// Labeled continue outer with partial field move.
struct Pair {
    a: string
    b: string
}

fn main() {
    hold let p = Pair { a: "x", b: "y" }
    let mut i = 0
    outer: while i < 2 {
        i = i + 1
        let mut j = 0
        while j < 2 {
            j = j + 1
            if i < 2 {
                let x = p.a
                print(x)
                continue outer
            }
            break
        }
    }
    print(p.a)
}
